# my-project

./: .gitignore  AGENTS.md  CLAUDE.md  openspec-getting-started-zh.md
.claude/: settings.json  statusline-command.sh  statusline.js
.claude/hooks/: post-tool-use-failure.js  post-tool-use.js  pre-tool-use.js  session-end.js  session-start.js  task-completed.js  task-created.js
.claude/skills/agent-browser/: SKILL.md
.claude/skills/hologres-ad-campaign/: SKILL.md  package.json
.claude/skills/hologres-bsi-profile-analysis/: SKILL.md  package.json
.claude/skills/hologres-cli/: SKILL.md  package.json  pyproject.toml
.claude/skills/hologres-cli/references/: ai-volume-model.md  commands.md  safety-features.md
.claude/skills/hologres-cli/tests/: conftest.py  test_skill_completeness.py  test_skill_consistency.py  test_skill_structure.py
.claude/skills/hologres-instance-health-analyse/: SKILL.md
.claude/skills/hologres-privileges/: SKILL.md  package.json
.claude/skills/hologres-query-optimizer/: SKILL.md  package.json
qps-monitor/: AGENTS.md  README.md  package-lock.json  package.json
qps-monitor/config/: default.json
qps-monitor/public/: app.js  index.html
qps-monitor/scripts/: install-windows-autostart.ps1  start-autostart.ps1
qps-monitor/server/: app.js
task-execution-monitor/: AGENTS.md  README.md  package-lock.json  package.json
task-execution-monitor/config/: default.json  local.json
task-execution-monitor/public/: app.js  index.html
task-execution-monitor/scripts/: install-windows-autostart.ps1
task-execution-monitor/server/: app.js
(+46 files in other folders)
