[project]
name = "hologres-cli-skill-tests"
version = "0.1.0"
description = "Test suite for hologres-cli agent skill validation"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]
